# benjamin-hodgson.github.io

./: .gitattributes  .gitignore  .travis.yml  404.html  404.md  CNAME  LICENSE.md  README.md  about.html  about.md  all.css  archive.html  atom.xml  benjamin-pizza.cabal  cabal.project  cabal.project.freeze  contact.html  contact.md  deploy.sh  index.html  new-post.sh  site.hs  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json
css/: 0_colours.css  0_nesting-support.css  0_water.css  1_highlight.css  2_custom.css  2_header-footer.css  3_headings.css  4_code.css  5_other.css  default.css
drafts/: 2017-10-18-functor-functors.md  2017-12-08-zip-folding.md  2018-11-30-zooming-in-on-default-interface-methods.md  2018-12-01-the-fourth-type-of-variance.md  2018-12-01-what-lurks-beneath-the-waves.md  2019-10-01-rewriting-irewritable.md  2019-12-01-write-you-a-prolog.md  2019-12-02-parsing-prolog-with-pidgin.md  2019-12-03-generic-unification-with-sawmill.md  2019-12-04-building-prologs-rules-engine.md  2019-12-08-parsing-prolog-with-pidgin.md  2019-12-15-generic-unification-with-sawmill.md  2019-12-22-building-prologs-rules-engine.md  2021-01-22-parallelising-source-positions.md  2021-04-01-compiling-prolog.md  2022-06-01-going-cubical.md  2022-08-01-imperatively-pretty.md  2024-08-13-prettier-happier-more-imperative.md
js/: main.js
posts/: 2015-08-23-example.html  2017-10-17-pidgin.md  2017-10-17-recursion-without-recursion.md  2017-11-13-recursion-without-recursion.html  2017-11-13-recursion-without-recursion.md  2017-12-15-functor-functors.html  2017-12-15-functor-functors.md  2018-01-10-zip-folding.html  2018-01-10-zip-folding.md  2018-01-26-announcing-pidgin-v2.0.html  2018-01-26-announcing-pidgin-v2.0.md  2018-03-10-eighty.html  2018-03-10-eighty.md  2018-03-16-eighty.html  2018-03-16-eighty.md  2018-07-16-live-streaming.html  2018-07-16-live-streaming.md  2018-12-06-zooming-in-on-field-accessors.html  2018-12-06-zooming-in-on-field-accessors.md  2019-01-11-the-fourth-type-of-variance.html  2019-01-11-the-fourth-type-of-variance.md  2019-01-26-announcing-pidgin-v2.0.html  2019-01-26-announcing-pidgin-v2.0.md  (+24 more)
templates/: comment.html  (+4 more)
(+20 files in other folders)
