name:                benjamin-pizza
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/benjamin-pizza#readme
license:             BSD3
license-file:        LICENSE.md
author:              Benjamin Hodgson
copyright:           2017-2021 Benjamin Hodgson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable benjamin-pizza
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base,
                       hakyll,
                       pandoc,
                       pandoc-types,
                       time,
                       text,
                       unordered-containers,
                       aeson
