cabal-version: 3.8

name: benjamin-pizza
version: 0.1.0.0
homepage: https://github.com/benjamin-hodgson/benjamin-hodgson.github.io
license: MIT AND CC-BY-4.0
license-file: LICENSE.md
author: Benjamin Hodgson
copyright: 2017-2024 Benjamin Hodgson
category: Web
build-type: Simple

executable benjamin-pizza
    main-is: site.hs
    default-language: GHC2021
    ghc-options: -threaded
    build-depends:
        base >= 4.17.0,
        hakyll >= 4.16.6.0,
        blaze-html,
        containers,
        commonmark,
        commonmark-extensions,
        parsec,
        skylighting,
        time,
        text
